--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/git,java,maven,windows,eclipse
+target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
