--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,4 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/git,java,maven,windows,eclipse
 *.properties
 target/m2e-wtp/web-resources/META-INF/maven/com.karma_and_tumblbug/p1/pom.properties
+*.properties
