--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,6 @@ $RECYCLE.BIN/
 *.properties
 target/m2e-wtp/web-resources/META-INF/maven/com.karma_and_tumblbug/p1/pom.properties
 *.properties
+target/m2e-wtp/web-resources/META-INF/maven/com.karma_and_tumblbug/p1/pom.properties
+target/m2e-wtp/web-resources/META-INF/maven/com.karma_and_tumblbug/p1/pom.properties
+target/m2e-wtp/web-resources/META-INF/maven/com.karma_and_tumblbug/p1/pom.properties
