--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,5 @@ target/m2e-wtp/web-resources/META-INF/maven/com.karma_and_tumblbug/p1/pom.proper
 target/m2e-wtp/web-resources/META-INF/maven/com.karma_and_tumblbug/p1/pom.properties
 target/m2e-wtp/web-resources/META-INF/maven/com.karma_and_tumblbug/p1/pom.properties
 target/m2e-wtp/web-resources/META-INF/maven/com.karma_and_tumblbug/p1/pom.properties
+target/m2e-wtp/web-resources/META-INF/maven/com.karma_and_tumblbug/p1/pom.properties
+src/main/webapp/resources/images/.DS_Store
