--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,4 @@ $RECYCLE.BIN/
 target/m2e-wtp/web-resources/META-INF/maven/com.karma_and_tumblbug/p1/pom.properties
 *.properties
 target/m2e-wtp/web-resources/META-INF/maven/com.karma_and_tumblbug/p1/pom.properties
+sql/project.sql
