--- a/.classpath
+++ b/.classpath
@@ -44,8 +44,8 @@
 			<attribute name="m2e-apt" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/user/local/apache-tomcat-9.0.43/lib/javaSDK-2.2.jar"/>
-	<classpathentry kind="lib" path="/user/local/apache-tomcat-9.0.43/lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/richard/coding/JAVA_LPT/workspace/karma_and_tumblbug/src/main/webapp/WEB-INF/lib/javaSDK-2.2.jar"/>
+	<classpathentry kind="lib" path="/Users/richard/coding/JAVA_LPT/workspace/karma_and_tumblbug/src/main/webapp/WEB-INF/lib/json-simple-1.1.1.jar"/>
 	<classpathentry kind="src" output="target/test-classes" path="target/generated-test-sources/test-annotations">
 		<attributes>
 			<attribute name="ignore_optional_problems" value="true"/>
