--- a/.classpath
+++ b/.classpath
@@ -44,8 +44,8 @@
 			<attribute name="m2e-apt" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/user/local/apache-tomcat-9.0.43/lib/javaSDK-2.2.jar"/>
-	<classpathentry kind="lib" path="/user/local/apache-tomcat-9.0.43/lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/은이/Documents/카카오톡 받은 파일/lib 2/lib 2/javaSDK-2.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/은이/Documents/카카오톡 받은 파일/lib 2/lib 2/json-simple-1.1.1.jar"/>
 	<classpathentry kind="src" output="target/test-classes" path="target/generated-test-sources/test-annotations">
 		<attributes>
 			<attribute name="ignore_optional_problems" value="true"/>
@@ -55,5 +55,6 @@
 			<attribute name="m2e-apt" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/은이/Documents/카카오톡 받은 파일/lib 2/lib 2/jstl-1.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
