--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,4 @@ target/m2e-wtp/web-resources/META-INF/maven/com.karma_and_tumblbug/p1/pom.proper
 target/m2e-wtp/web-resources/META-INF/maven/com.karma_and_tumblbug/p1/pom.properties
 sql/project.sql
 target/m2e-wtp/web-resources/META-INF/maven/com.karma_and_tumblbug/p1/pom.properties
+target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
